--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   
   <body>
     <ol>
-      <li><a href="">Ejercicio 1</a></li>
-      <li><a href="">Ejercicio 2</a></li>
-      <li><a href="">Ejercicio 3</a></li>
-      <li><a href="">Ejercicio 4</a></li>
-      <li><a href="">Ejercicio 5</a></li>
-      <li><a href="">Ejercicio 6</a></li>
-      <li><a href="">Ejercicio 7</a></li>
+      <li><a href="Ejercicio1/Ejercicio1.html">Ejercicio 1</a></li>
+      <li><a href="Ejercicio2/Ejercicio2.html">Ejercicio 2</a></li>
+      <li><a href="Ejercicio 3/Ejercicio3.html">Ejercicio 3</a></li>
+      <li><a href="Ejercicio4/Ejercicio4.html">Ejercicio 4</a></li>
+      <li><a href="Ejercicio5/Ejercicio5.html">Ejercicio 5</a></li>
+      <li><a href="Ejercicio6y7/Ejercicio6.html">Ejercicio 6</a></li>
+      <li><a href="Ejercicio7/Ejercicio7.html">Ejercicio 7</a></li>
     </ol>
       </body>
   </html>
