--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     </head>
   
   <body>
+    
+    <h1>EJERCICIOS</h1>
+    <br>
     <ol>
       <li><a href="Ejercicio1/Ejercicio1.html">Ejercicio 1</a></li>
       <li><a href="Ejercicio2/Ejercicio2.html">Ejercicio 2</a></li>
