--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>EJERCICIOS</h1>
     <br>
     <ol>
-      <li><a href="Ejercicio1/Ejercicio1.html">Ejercicio 1</a></li>
+      <li><a href="../Ejercicio1/Ejercicio1.html">Ejercicio 1</a></li>
       <li><a href="Ejercicio2/Ejercicio2.html">Ejercicio 2</a></li>
       <li><a href="Ejercicio 3/Ejercicio3.html">Ejercicio 3</a></li>
       <li><a href="Ejercicio4/Ejercicio4.html">Ejercicio 4</a></li>
