--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
+    <title>Ejercicios Desarrollo de Servicios</title>
     </head>
   
   <body>
     
     <h1>EJERCICIOS</h1>
-    <br>
     <ol>
       <li><a href="https://meylinsore.github.io/Ejercicios.github.io/Ejercicio1/Ejercicio1.html">Ejercicio 1</a></li>
       <li><a href="https://meylinsore.github.io/Ejercicios.github.io/Ejercicio2/Ejercicio2.html">Ejercicio 2</a></li>
