--- a/Ejercicio6y7/Ejercicio6-1.html
+++ b/Ejercicio6y7/Ejercicio6-1.html
@@ -4,6 +4,6 @@
   </head>
   
   <body>
-    <img src="https://cdn.glitch.global/a12b1dd0-40fe-4267-9336-718700a54933/imagen1.png?v=1676278347205">  
+    <img src="../Imagenes/imagen1.png">  
   </body>
 </html>
