--- a/Ejercicio6y7/Ejercicio6-2.html
+++ b/Ejercicio6y7/Ejercicio6-2.html
@@ -7,6 +7,6 @@
   </style>
   
   <body>
-    <img src="https://cdn.glitch.global/a12b1dd0-40fe-4267-9336-718700a54933/proyecto2?v=1676068744449">  
+    <img src="../Imagenes/imagen2.png">  
   </body>
 </html>
