--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
       <li><a href="https://meylinsore.github.io/Ejercicios.github.io/Ejercicio 3/Ejercicio3.html">Ejercicio 3</a></li>
       <li><a href="https://meylinsore.github.io/Ejercicios.github.io/Ejercicio4/Ejercicio4.html">Ejercicio 4</a></li>
       <li><a href="https://meylinsore.github.io/Ejercicios.github.io/Ejercicio5/Ejercicio5.html">Ejercicio 5</a></li>
-      <li><a href="https://meylinsore.github.io/Ejercicios.github.io/Ejercicio6y7/Ejercicio6.html">Ejercicio 6</a></li>
-      <li><a href="https://meylinsore.github.io/Ejercicios.github.io/Ejercicio7/Ejercicio7.html">Ejercicio 7</a></li>
-    </ol>
+      <li><a href="https://meylinsore.github.io/Ejercicios.github.io/Ejercicio6y7/Ejercicio6.html">Ejercicio 6 y 7</a></li>
       </body>
   </html>
