--- a/Ejercicio6y7/Ejercicio6.html
+++ b/Ejercicio6y7/Ejercicio6.html
@@ -15,7 +15,7 @@
 
 <p>Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat. Aliquam dui ligula, porttitor eu, facilisis vitae, ornare sed, tortor.</p>
 
-<p><a href="indice.html" title="Ultimos proyectos realizados por Mi Sitio">Acceder a los ultimos proyectos de Mi Sitio</a></p>
+<p><a href="Ejercicio7.html" title="Ultimos proyectos realizados por Mi Sitio">Acceder a los ultimos proyectos de Mi Sitio</a></p>
 
 
 </body>
