--- a/Ejercicio6y7/Ejercicio7.html
+++ b/Ejercicio6y7/Ejercicio7.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Mi Sitio</title>
-    <link rel="shortcut icon" href="../imagen1.png" type="image/png" />
+    <link rel="shortcut icon" href="../Imagenes/favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
