--- a/Ejercicio6y7/Ejercicio7.html
+++ b/Ejercicio6y7/Ejercicio7.html
@@ -3,7 +3,17 @@
     <title>Mi Sitio</title>
     <link rel="shortcut icon" href="../Imagenes/favicon.ico" type="image/x-icon" />
   </head>
-
+  <style>
+  .imagen1{
+    width:70px;
+    height:40px;
+    }
+    
+    .imagen2{
+    width:70px;
+    height:40px;
+    }
+  </style>
   <body>
     <p>
       <a
@@ -31,7 +41,7 @@
     </p>
 
     <p>
-      <a href="Ejercicio6-1.html" title="Imagen del Proyecto 1"> Ver imagen del Proyecto 1
+      <a href="Ejercicio6-1.html" id="imagen1" title="Imagen del Proyecto 1"> Ver imagen del Proyecto 1
       </a>
     </p>
 
@@ -43,7 +53,7 @@
     </p>
 
     <p>
-     <a href="Ejercicio6-2.html" title="Imagen del Proyecto 2"> Ver imagen del Proyecto 2</a>
+     <a href="Ejercicio6-2.html" id="imagen2" title="Imagen del Proyecto 2"> Ver imagen del Proyecto 2</a>
     </p>
   </body>
 </html>
