--- a/Ejercicio6y7/Ejercicio7.html
+++ b/Ejercicio6y7/Ejercicio7.html
@@ -4,12 +4,12 @@
     <link rel="shortcut icon" href="../Imagenes/favicon.ico" type="image/x-icon" />
   </head>
   <style>
-  .imagen1{
+  #imagen1{
     width:70px;
     height:40px;
     }
     
-    .imagen2{
+   #imagen2{
     width:70px;
     height:40px;
     }
