--- a/Ejercicio2/Ejercicio2.html
+++ b/Ejercicio2/Ejercicio2.html
@@ -43,5 +43,18 @@
       <strong>Herbert George Wells</strong> también se concibieron ideas de
       exploración del espacio y de contacto con civilizaciones extraterrestres.
     </p>
+     <p>
+      Ademas de textos en <strong>negrita</strong>, tambien se pueden poner
+      <em>en cursiva</em> o <del>tachados</del>
+      </p>
+     <p>    
+      <a
+        href="https://meylinsore.github.io/Ejercicios.github.io/"
+        title="Página principal de Mi Sitio"
+        hreflang="es"
+        type="text/html"
+        charset="UTF-8"
+        >Volver a la pagina principal</a>
+    </p>
   </body>
 </html>
