--- a/Ejercicio2/Ejercicio2.html
+++ b/Ejercicio2/Ejercicio2.html
@@ -1,6 +1,49 @@
 <html>
   <head>
     <title>La exploración espacial</title>
+     <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f5f5f5;
+        color: #333;
+        line-height: 1.5;
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        font-size: 36px;
+        font-weight: bold;
+        text-align: center;
+        margin-top: 50px;
+      }
+
+      p {
+        font-size: 18px;
+        margin: 20px;
+      }
+
+      strong {
+        color: #ff0000;
+      }
+
+      em {
+        font-style: italic;
+      }
+
+      del {
+        text-decoration: line-through;
+      }
+
+      a {
+        color: #0000ff;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
 
   <body>
