--- a/Ejercicio 3/Ejercicio3.html
+++ b/Ejercicio 3/Ejercicio3.html
@@ -3,6 +3,49 @@
     <title>
       El Ártico ha perdido el 14% de su hielo marino perenne en un solo año
     </title>
+     <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f5f5f5;
+        color: #333;
+        line-height: 1.5;
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        font-size: 36px;
+        font-weight: bold;
+        text-align: center;
+        margin-top: 50px;
+      }
+
+      p {
+        font-size: 18px;
+        margin: 20px;
+      }
+
+      strong {
+        color: #ff0000;
+      }
+
+      em {
+        font-style: italic;
+      }
+
+      del {
+        text-decoration: line-through;
+      }
+
+      a {
+        color: #0000ff;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
 
   <body>
@@ -41,5 +84,17 @@
         comercio."</em
       >
     </blockquote>
+     <p>
+      <a
+        href="https://meylinsore.github.io/Ejercicios.github.io/"
+        title="Página principal de Mi Sitio"
+        hreflang="es"
+        type="text/html"
+        charset="UTF-8"
+        >Volver a la página principal</a
+      >
+    </p>
+    
+    
   </body>
 </html>
