--- a/Ejercicio6y7/Ejercicio6.html
+++ b/Ejercicio6y7/Ejercicio6.html
@@ -59,7 +59,15 @@
 <p>Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat. Aliquam dui ligula, porttitor eu, facilisis vitae, ornare sed, tortor.</p>
 
 <p><a href="Ejercicio7.html" title="Ultimos proyectos realizados por Mi Sitio">Acceder a los ultimos proyectos de Mi Sitio</a></p>
-
+<p>    
+      <a
+        href="https://meylinsore.github.io/Ejercicios.github.io/"
+        title="Página principal de Mi Sitio"
+        hreflang="es"
+        type="text/html"
+        charset="UTF-8"
+        >Volver a la pagina principal</a>
+    </p>
 
 </body>
 
