--- a/Ejercicio6y7/Ejercicio7.html
+++ b/Ejercicio6y7/Ejercicio7.html
@@ -56,5 +56,14 @@
     <p>
      <a href="Ejercicio6-2.html" id="imagen2" title="Imagen del Proyecto 2"> Ver imagen del Proyecto 2</a>
     </p>
+    <p>    
+      <a
+        href="https://meylinsore.github.io/Ejercicios.github.io/"
+        title="Página principal de Mi Sitio"
+        hreflang="es"
+        type="text/html"
+        charset="UTF-8"
+        >Volver a la pagina principal</a>
+    </p>
   </body>
 </html>
