--- a/index.html
+++ b/index.html
@@ -2,7 +2,33 @@
   <head>
     <title>Ejercicios Desarrollo de Servicios</title>
     </head>
-  
+  <style>
+		ul {
+			list-style-type: none;
+			margin: 10;
+			padding: 10;
+			overflow: hidden;
+			background-color: #333;
+		}
+		
+		li {
+			float: center;
+		}
+		
+		li a {
+			display: block;
+			color: white;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+		}
+		
+		li a:hover {
+			background-color: #111;
+		}
+	</style>
+	<h1> <center>Lista de Ejercicios del 9 al 16 </center></h1>
+	<h3> <center>Realizado por Meylin Soto </center></h3></br>
   <body>
     
     <h1>EJERCICIOS</h1>
