--- a/Ejercicio8/Ejercicio8.html
+++ b/Ejercicio8/Ejercicio8.html
@@ -57,9 +57,9 @@
   <li>
     <strong>Noticias</strong>
     <ul>
-      <li><a href="#" title="Ver las noticias más recientes">Recientes</a></li>
-      <li><strong><a href="#" title="Ver las noticias más leídas">Más leídas</a></strong></li>
-      <li><a href="#" title="Ver las noticias más valoradas">Más valoradas</a></li>
+      <li><a href="https://elpais.com/ultimas-noticias/" title="Ver las noticias más recientes">Recientes</a></li>
+      <li><strong><a href="https://www.marca.com/noticias-mas-leidas.html" title="Ver las noticias más leídas">Más leídas</a></strong></li>
+      <li><a href="https://www.20minutos.es/noticia/73063/0/2005/noticias/valoradas/" title="Ver las noticias más valoradas">Más valoradas</a></li>
     </ul>
   </li>
 </ul>
